--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '27.0.3'
 
     defaultConfig {
-        applicationId "com.example.mini"
+        applicationId "com.bhanu.mini"
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
