--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_action_name4"
-        android:label="Voice E-Mail"
+        android:label="VMail"
         android:theme="@style/AppTheme">
         <activity
             android:name="com.bhanu.mini.LoginActivity"
