--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         </activity>
         <activity
             android:name="com.bhanu.mini.WelcomePage"
+            android:noHistory="true"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="Voice Based E-Mail"
             android:theme="@style/FullscreenTheme">
